# Dissertation

./: .dockerignore  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run_experiment.sh
config/: datasets.yml  experiments.py  hugging_face_models.yml  prompts.py  signals.py
core/: README.md  evaluator.py  experiment.py  followup_analysis_tools.py  graph_manager.py  llm_factory.py  misinformation_detection.py  prompts.py  rag.py  state.py
data/: README.md
data/fewshot/: FA-KES_10.txt  covid_fake_news_100.txt  isot_100.txt  politifact_100.txt  recovery-news-data_None.txt
data/transformed/: FA-KES.csv  FA-KES_10.csv  FA-KES_100.csv  FA-KES_None.csv  covid_fake_news_100.csv  politifact_100.csv  recovery-news-data_100.csv
experiments/: basic_graph.ipynb
notebooks/: auxiliary_models.ipynb  logistic_regression_classifier.ipynb  rag.ipynb  results_analysis.ipynb  visualise_experiment.ipynb  zero_shot.ipynb
notebooks/baseline/: zero_shot.ipynb
results/: 2025-02-22T14:34:15.304505_experiment_82e317f8-5d94-4b37-9610-1bac288bae85.json  2025-02-22T15:31:57.202251_experiment_f52b20c8-c380-4f5f-b271-c5d4384ea1ad.json  2025-02-22T15:41:35.023496_experiment_d00c53db-288f-4f92-9983-005665e2e6ca.json
scripts/: dataset_prep.py  hugging_face_download.sh  langsmith_dataset_upload.py
utils/: constants.py  logging.py  utils.py
utils/data/: __init__.py  csv_parsing.py  dataset_prep.py  langsmith_dataset.py  results.py
utils/langchain/: experiment_types.py  llm_model_selector.py  prompts.py
