[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["FinlayDuff <f.duff@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.12.2"
langgraph = "^0.2.23"
langchain-anthropic = "^0.2.1"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.5"
ipykernel = "^6.29.5"
pydantic = "^2.9.2"
chardet = "^5.2.0"
pandas = "^2.2.3"
langsmith = "^0.1.125"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
