[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["FinlayDuff <f.duff@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typing-extensions = "^4.12.2"
langgraph = "^0.2.23"
langchain-anthropic = "^0.2.1"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.5"
ipykernel = "^6.29.5"
pydantic = "^2.9.2"
chardet = "^5.2.0"
pandas = "^2.2.3"
langsmith = "^0.1.125"
transformers = "^4.47.1"
torch = "^2.5.1"
torchaudio = "^2.5.1"
matplotlib = "^3.10.0"
langchain-cohere = "^0.3.4"
langchain-huggingface = "^0.1.2"
plotly = "^6.0.0"
nbformat = "^5.10.4"
sentencepiece = "^0.2.0"
tiktoken = "^0.9.0"
duckduckgo-search = "^8.0.1"
spacy = "^3.8.5"
yake = "^0.4.8"
pytextrank = "^3.3.0"
pyppeteer = "^2.0.0"
loguru = "^0.7.3"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
llama-cpp-python = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
